error
File "<ipython-input-1-4c9fb9e93096>", line 93
    except requests.exceptions.RequestException as e:
         ^
SyntaxError: invalid syntax
